--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //--------Room Dependency--------
+    //Ref:https://developer.android.com/jetpack/androidx/releases/room#groovy
+    def room_version = "2.4.2"
+    // Java language implementation
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
